# osu_player

./: CMakeLists.txt  README.md
include/: analysis.h  clicker.h  screener.h
src/: analysis.cpp  clicker.cpp  main.cpp  screener.cpp
